--- a/src/pages/landing/landing.module.css
+++ b/src/pages/landing/landing.module.css
@@ -46,10 +46,7 @@
     width: 100%;
     height: 100%;
   }
-  .subContainer {
-    display: flex;
-    justify-content: right;
-  }
+
 }
 
 .contact {
@@ -84,12 +81,7 @@ a:visited {
     cursor: pointer;
   }
 }
-.socialLinks {
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    img {
-      padding-left: 10px;
-    }
+
+p{
+  margin-bottom: auto !important;
 }
