--- a/src/pages/landing/landing.module.css
+++ b/src/pages/landing/landing.module.css
@@ -24,9 +24,8 @@
     padding: 5px 5px 5px 5px;
   }
 
-  h2 {
-    margin-top: 20px;
-    font-weight: 300;
+  h4 {
+    font-size: 1.4rem;
   }
 }
 .rightContainer {
