--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -5,5 +5,19 @@
     width: 100%;
     text-align: center;
     padding: 0.5rem;
-  background-color: #b6a798;
+
+
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+
+  h3{
+    width: fit-content;
+    margin: auto;
+    background-color: black;
+    color: white;
+    padding: 5px
+  }
 }
