--- a/src/pages/landing/landing.module.css
+++ b/src/pages/landing/landing.module.css
@@ -20,7 +20,8 @@
     background-color: black;
     color: white;
     width: fit-content;
-    padding: 5px 5px 5px 5px;
+    padding: 5px 10px 5px 2px;
+    font-style: italic;
   }
 
   h3 {
